<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_colossal"
    android:background="@android:color/white">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/primary_dark"
        android:layout_centerInParent="true"/>

    <ImageView
        android:id="@+id/icon_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="2"
        android:scaleY="2"
        android:layout_alignParentRight="true"
        tools:src="@drawable/d50" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailsTitle"
            android:text="@string/weather"/>

        <TextView
            android:id="@+id/main_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailsSubTitle"
            tools:text="Rain"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailsTitle"
            android:text="@string/details"/>

        <TextView
            android:id="@+id/description_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailsSubTitle"
            tools:text="Small rain"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailsTitle"
            android:text="@string/temperature"/>

        <TextView
            android:id="@+id/temperature_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailsSubTitle"
            tools:text="30°C"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailsTitle"
            android:text="@string/pressure"/>

        <TextView
            android:id="@+id/pressure_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailsSubTitle"
            tools:text="1000hPa"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailsTitle"
            android:text="@string/humidity"/>

        <TextView
            android:id="@+id/humidity_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailsSubTitle"
            tools:text="96%"/>

    </LinearLayout>

</RelativeLayout>
